# geno-mine

./: GENO.md  README.md  SKILL.md  genotools.yaml  mkdocs.yml  pyproject.toml
.specs/: GOALS.md  TENETS.md  VISION.md
docs/: getting-started.md  index.md
geno_mine/: backfill.py  cli.py  correlator.py  filters.py  generator.py  signals.py  store.py
skills/geno-mine/: SKILL.md
skills/geno-mine-export/: SKILL.md
skills/geno-mine-extract/: SKILL.md
skills/geno-mine-stats/: SKILL.md
