[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geno-mine"
version = "0.1.0"
description = "Session mining and finetuning dataset generation for the geno ecosystem"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
geno-mine = "geno_mine.cli:main"

[tool.setuptools.packages.find]
include = ["geno_mine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
